--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -20,9 +20,9 @@ workflows:
       - name: Install npm dependencies
         script: |
                     npm install
-      - name: Install CocoaPods dependencies
-        script: |
-                    cd ios && pod install       
+      # - name: Install CocoaPods dependencies
+      #   script: |
+      #               cd ios && pod install
       - name: Set up code signing settings on Xcode project
         script: |
                     xcode-project use-profiles --warn-only
